--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "plotly.js": "^1.54.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flow-renderer": "^5.3.1",
     "react-plotly.js": "^2.4.0",
     "react-rnd": "^10.2.0",
     "react-scripts": "3.4.1",
