--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
