--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flow-renderer": "^5.3.1",
+    "react-hotkeys-hook": "^2.3.1",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.1",
     "react-rnd": "^10.2.0",
