--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
      },
-    "emmet.extensionsPath": ""
+    "emmet.extensionsPath": [
+        ""
+    ]
 }
